Fixed pip value alignment on RTL horizontal sliders

--- a/distribute/nouislider.css
+++ b/distribute/nouislider.css
@@ -1,4 +1,4 @@
-/*! nouislider - 10.0.0 - 2017-06-27 15:36:52 */
+/*! nouislider - 10.0.0 - 2017-06-27 15:51:09 */
 /* Functional styling;
  * These styles are required for noUiSlider to function.
  * You don't need to change these rules to apply your design.
@@ -198,6 +198,10 @@
 .noUi-value-horizontal {
   -webkit-transform: translate3d(-50%, 50%, 0);
   transform: translate3d(-50%, 50%, 0);
+}
+.noUi-rtl .noUi-value-horizontal {
+  -webkit-transform: translate3d(50%, 50%, 0);
+  transform: translate3d(50%, 50%, 0);
 }
 .noUi-marker-horizontal.noUi-marker {
   margin-left: -1px;
